<resources>
    <string name="app_name">BCare</string>
    <string name="VIP_Rawy_Bold_Bold" translatable="false">VIP_Rawy_Bold_Bold.otf</string>
    <string name="VIP_Rawy_Regular" translatable="false">VIP_Rawy_Regular.otf</string>
    <string name="TypoGraphica" translatable="false">TypoGraphica.otf</string>
    <string name="zahra_arabic" translatable="false">zahra_arabic.otf</string>
    <string name="Dubai_Light" translatable="false">Dubai_Light.ttf</string>
    <string name="Dubai_Bold" translatable="false">Dubai_Bold.ttf</string>
    <string name="Dubai_Medium" translatable="false">Dubai_Medium.ttf</string>
    <string name="Helvetica_Light" translatable="false">Helvetica_Light.ttf</string>
    <string name="Trebuchet_MS" translatable="false">Trebuchet_MS.ttf</string>
    <string name="VIPHakmRegular_VIPHakm" translatable="false">VIPHakmRegular_VIPHakm.ttf</string>
    <string name="current_lang">en</string>
    <string name="language">عربى</string>
    <string name="lang">ar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_activity_navigation">ActivityNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Email_Error">Please Enter Correct Email…</string>
    <string name="Mobile_Error">Please Enter Correct Phone…</string>
    <string name="title_home" translatable="true">Home</string>
    <string name="title_dashboard" translatable="true">My Appointment</string>
    <string name="title_notifications" translatable="true">My Account</string>
    <string name="control_Board" translatable="true">Control Board</string>
    <string name="menu_home" translatable="true">Services</string>
    <string name="menu_gallery" translatable="true">Favorites</string>
    <string name="menu_slideshow" translatable="true">Points</string>
    <string name="menu_tools" translatable="true">Call Us</string>
    <string name="menu_share" translatable="true">About Bcare</string>
    <string name="menu_send" translatable="true">Change the Language</string>
    <string name="previous_Appointment" translatable="true">Previous Appointment</string>
    <string name="next_Appointment" translatable="true">Next Appointment</string>
    <string name="Point" translatable="true">Point</string>
    <string name="Edit_description" translatable="true">Edit Description</string>
    <string name="Enter_the_discount_code" translatable="true">Enter The Discount Code</string>
    <string name="user_name" translatable="true">User Name</string>
    <string name="Edit" translatable="true">Edit</string>
    <string name="Email" translatable="true">E-mail</string>
    <string name="password" translatable="true">password</string>
    <string name="location" translatable="true">Location</string>
    <string name="Receive_notifications" translatable="true">Receive Notifications</string>
    <string name="Create_an_account" translatable="true">Create an Account</string>
    <string name="Create_an_account_with_your_mobile_number" translatable="true">Create an Account With your Mobile Number</string>
    <string name="Create_an_account_by_phone_number" translatable="true">Create an Account by Phone Number</string>
    <string name="Create_an_account_by_email" translatable="true">Create an Account by Email</string>
    <string name="LogIn" translatable="true">Log in</string>
    <string name="have_an_account" translatable="true">have an account ,</string>
    <string name="or" translatable="true">OR</string>
    <string name="via_social_media" translatable="true">Via Social Media</string>
    <string name="with_your_mobile_number" translatable="true">With your Mobile Number</string>
    <string name="Continue" translatable="true">Continue</string>
    <string name="Enter_your_phone_number" translatable="true">Enter Your Phone Number</string>
    <string name="Enter_your_email" translatable="true">Enter Your Email</string>
    <string name="phone_number" translatable="true">Phone Number</string>
    <string name="Confirm_phone_number" translatable="true">Confirm Phone Number</string>
    <string name="Enter_the_code_that_you_received_in_a_text_message" translatable="true">Enter the Code that you Received in a text Message</string>
    <string name="confirm" translatable="true">Confirm</string>
    <string name="verify_your_email" translatable="true">Verify Your Email</string>
    <string name="Enter_the_code_sent_to_your_email_to_confirm" translatable="true">Enter the code sent to your email to confirm</string>
    <string name="Enter_personal_information" translatable="true">Enter Personal Information</string>
    <string name="Full_name" translatable="true">Full Name</string>
    <string name="Country" translatable="true">Country</string>
    <string name="City" translatable="true">City</string>
    <string name="Address" translatable="true">Address</string>
    <string name="Password" translatable="true">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Birth_Date" translatable="true">Birth Date</string>
    <string name="Enter_your_email_and_choose_a_password" translatable="true">Enter Your E-mail and Choose a Password</string>
    <string name="Description_retrieve_pass" translatable="true">To retrieve your password.
        You will receive an email containing instructions on how to reset your password reset.
        If you are having trouble resetting your password, contact us or send us an email</string>
    <string name="Forgot_password" translatable="true">Forgot Password</string>
    <string name="Restore_password" translatable="true">Restore password</string>
    <string name="do_not_have_an_account_yet_open_one" translatable="true">do Not Have Account Yet, Create One</string>
    <string name="sent_succesfully" translatable="true">Sent Successfully</string>
    <string name="Please_check_your_mailbox" translatable="true">Please Check Your Mailbox, You Will Find a Link to Reset Your Account Password</string>
    <string name="ending" translatable="true">Ending</string>
    <string name="Choose_the_method_that_is_right_for_you" translatable="true">Choose the Method That is Right For You</string>
    <string name="By_telephone_number" translatable="true">By Phone Number</string>
    <string name="By_Email" translatable="true">By Email</string>
    <string name="do_Not_Have_an_Account_Yet" translatable="true">do Not Have Account</string>
    <string name="Create_One" translatable="true">Create One</string>
    <string name="Login_via_mobile_number">Login Via Phone number</string>
    <string name="Email_Or_UserName" translatable="true">Email Or User Name</string>
    <string name="Login_via_Emaile">Login Via Email Address</string>
    <string name="Times_available" translatable="true">Times Available</string>
    <string name="Select_Specialist" translatable="true">Select Specialist</string>
    <string name="Book_now" translatable="true">Booking now</string>
    <string name="Specialists" translatable="true">Specialists</string>
    <string name="see_more" translatable="true">see more</string>
    <string name="Our_pages_on_social_networking_sites" translatable="true">Our Pages on Social Networking Sites</string>
    <string name="Geographical_location" translatable="true">Geographical Location</string>
    <string name="Our_specialists" translatable="true">Our specialists</string>
    <string name="Specialist_values" translatable="true">Specialist values</string>
    <string name="Write_your_review_in_the_app_here" translatable="true">Write Your Review in the App Here</string>
    <string name="Customer_opinions" translatable="true">Customer Opinions</string>
    <string name="Submit_your_rating" translatable="true">Submit your rating</string>
    <string name="Mor" translatable="true">Mor</string>
    <string name="Discount_code" translatable="true">Discount Code</string>
    <string name="Paste_or_type_the_code_here" translatable="true">Paste or type the code here</string>
    <string name="Choose_the_state" translatable="true">Choose the State</string>
    <string name="Choose_Salon_Type" translatable="true">Choose Salon Type</string>
    <string name="Choose_by_age_or_gender" translatable="true">Choose by age or gender</string>
    <string name="women" translatable="true">Women</string>
    <string name="Men" translatable="true">Men</string>
    <string name="Children" translatable="true">Children</string>
    <string name="Saloon_Pictures" translatable="true">Saloon Pictures</string>
    <string name="Appointment_Booking" translatable="true">Appointment Booking</string>
    <string name="Fans" translatable="true">Fans</string>
    <string name="begain_from" translatable="true">Begin From</string>
    <string name="Reschedule" translatable="true">Reschedule</string>
    <string name="useful" translatable="true">Useful</string>
    <string name="Unuseful" translatable="true">Un Useful</string>
    <string name="ok" translatable="true">Ok</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="Booking_again" translatable="true">Booking Again</string>
    <string name="discount" translatable="true">Discount</string>
    <string name="check_data" translatable="true">Check your data</string>
    <string name="check_data_signup" translatable="true">Email or username used before</string>
    <string name="salon_about" translatable="true">About salon</string>
    <string name="salon_services" translatable="true">Salon services</string>
    <string name="salon_reviews" translatable="true">Salon reviews</string>
    <string name="my_account">My Account</string>
    <string name="my_appointments">My Appointments</string>
    <string name="Choose_Gender_Type" translatable="true">Choose Gender Type</string>
    <string name="at_salon" translatable="true">At Salon</string>
    <string name="at_home" translatable="true">At Home</string>
    <string name="About_the_salon" translatable="true">About the Salon</string>
    <string name="Services" translatable="true">Services</string>
    <string name="Ratings" translatable="true">Ratings</string>
    <string name="The_description_must" translatable="true">The description must be at least 10 characters.</string>
    <string name="Welcome_to_Bakar_application" translatable="true">Welcome to the Bcare Application</string>
    <string name="Logout" translatable="true">Sign Out</string>
    <string name="Booking_successful" translatable="true">Booking Successful</string>
    <string name="Confirm_appointment" translatable="true">Confirm Appointment</string>
    <string name="service_type" translatable="true">Service Type</string>
    <string name="Date_of_appointment" translatable="true">Date of appointment</string>
    <string name="To_confirm_the_request" translatable="true">To confirm the request you will receive an SMS message</string>
    <string name="congratulations" translatable="true">Congratulations</string>
    <string name="Got_discount" translatable="true">Got a Discount</string>
    <string name="Select_Service" translatable="true">Select Service</string>
    <string name="Notifications" translatable="true">Notifications</string>
    <string name="Enter_discount_code" translatable="true">Enter the Discount Code</string>
    <string name="Get_special_discounts_by" translatable="true">Get Special Discounts by Entering the Discount Code Below</string>
    <string name="get_the_discount" translatable="true">Get the Discount</string>
</resources>