<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.activity.ForgotPasswordActivityStep1">

    <ProgressBar
        android:id="@+id/progress_view"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.fontutil.TextViewCustomFont
                android:id="@+id/textView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dimension200"
                android:text="@string/Forgot_password"
                app:font_name="@string/VIP_Rawy_Bold_Bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.fontutil.TextViewCustomFont
                android:id="@+id/textView2"
                style="@style/no_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dimension8"
                android:layout_marginEnd="24dp"
                android:text="@string/Description_retrieve_pass"
                app:font_name="@string/VIP_Rawy_Regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.example.fontutil.EditTextCustomFont
                android:id="@+id/ET_ForgotPassEmail"
                style="@style/EditTextStyle"
                android:background="@drawable/et_f"
                android:layout_width="@dimen/dimension0"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dimension32"
                android:layout_marginEnd="@dimen/dimension24"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                app:font_name="@string/VIP_Rawy_Regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <com.example.fontutil.ButtonCustomFont
                android:id="@+id/BTN_Restore_password_btn"
                style="@style/zzzz"
                android:layout_width="@dimen/dimension0"
                android:layout_height="@dimen/dimension45"
                android:layout_marginTop="@dimen/dimension16"
                android:textAllCaps="false"
                android:background="@drawable/login_btn"
                android:text="@string/Restore_password"
                app:font_name="@string/VIP_Rawy_Bold_Bold"
                app:layout_constraintEnd_toEndOf="@+id/ET_ForgotPassEmail"
                app:layout_constraintStart_toStartOf="@+id/ET_ForgotPassEmail"
                app:layout_constraintTop_toBottomOf="@+id/ET_ForgotPassEmail" />

            <com.example.fontutil.TextViewCustomFont
                android:id="@+id/TV_ForgotPass_LoginLink_Login"
                style="@style/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/LogIn"
                app:font_name="@string/VIP_Rawy_Regular"
                app:layout_constraintBottom_toBottomOf="@+id/TV_ForgotPass_CreateAccountLink"
                app:layout_constraintEnd_toEndOf="@+id/BTN_Restore_password_btn"
                app:layout_constraintTop_toTopOf="@+id/TV_ForgotPass_CreateAccountLink" />

            <com.example.fontutil.TextViewCustomFont
                android:id="@+id/TV_ForgotPass_CreateAccountLink"
                style="@style/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension8"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/dimension32"
                android:padding="4dp"
                android:text="@string/do_not_have_an_account_yet_open_one"
                app:font_name="@string/VIP_Rawy_Regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/TV_ForgotPass_LoginLink_Login"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/BTN_Restore_password_btn"
                app:layout_constraintTop_toBottomOf="@+id/BTN_Restore_password_btn" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>