<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround_SelectSalon_item"
    tools:context=".ui.fragment.DiscountCode">

    <include
        android:id="@+id/DiscountTB"
        layout="@layout/custom_tool_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.example.fontutil.TextViewCustomFont
        android:id="@+id/textView"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimension24"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="@dimen/dimension24"
        android:text="@string/Enter_discount_code"
        app:font_name="@string/VIP_Rawy_Bold_Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.fontutil.TextViewCustomFont
        android:id="@+id/textView2"
        style="@style/login_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimension24"
        android:layout_marginTop="@dimen/dimension8"
        android:layout_marginEnd="@dimen/dimension24"
        android:gravity="center"
        android:text="@string/Get_special_discounts_by"
        app:font_name="@string/VIP_Rawy_Regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.chaos.view.PinView
        android:id="@+id/pinViewDiscountCode"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/tap_blue"
        android:textSize="@dimen/text20"
        android:textStyle="bold"
        android:theme="@style/PinV"
        app:itemCount="4"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lineColor="@color/tap_blue"
        app:viewType="line" />

    <com.example.fontutil.ButtonCustomFont
        android:id="@+id/BTN_GetYourDiscount"
        android:layout_width="@dimen/dimension0"
        android:layout_height="@dimen/dimension50"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:textAllCaps="false"
        style="@style/zzzz"
        android:background="@drawable/login_btn"
        android:text="@string/get_the_discount"
        app:font_name="@string/VIP_Rawy_Bold_Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinViewDiscountCode" />

</android.support.constraint.ConstraintLayout>