<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.activity.ForgotPasswordActivityStep2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/IV_BackIconForgot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_s" />

            <com.example.fontutil.TextViewCustomFont
                android:id="@+id/textView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dimension250"
                android:text="@string/sent_succesfully"
                app:font_name="@string/VIP_Rawy_Bold_Bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.fontutil.TextViewCustomFont
                android:id="@+id/textView2"
                style="@style/no_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimension24"
                android:layout_marginTop="@dimen/dimension8"
                android:layout_marginEnd="24dp"
                android:text="@string/Please_check_your_mailbox"
                app:font_name="@string/VIP_Rawy_Regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <com.example.fontutil.ButtonCustomFont
                android:id="@+id/BTN_Ending"
                style="@style/login_btn"
                android:textAllCaps="false"
                android:layout_width="@dimen/dimension0"
                android:layout_height="@dimen/dimension50"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/dimension36"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="@dimen/dimension32"
                android:background="@drawable/login_btn"
                android:text="@string/ending"
                app:font_name="@string/VIP_Rawy_Bold_Bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>