<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dimension320"
    android:layout_height="@dimen/dimension120"
    app:cardElevation="@dimen/dimension12"
    android:layout_marginEnd="@dimen/dimension8"
    android:layout_marginStart="@dimen/dimension8"
    app:cardCornerRadius="@dimen/dimension14"
    android:layout_gravity="center_horizontal">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/IV_Advertisements"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blow_dryer_brush_cosmetic"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shadw_ite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.fontutil.ButtonCustomFont
                android:id="@+id/BTN_Booking"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimension25"
                android:layout_marginTop="@dimen/dimension8"
                android:layout_marginEnd="@dimen/dimension32"
                android:layout_marginBottom="@dimen/dimension8"
                android:background="@drawable/prn_item"
                android:text="@string/Book_now"
                android:textAllCaps="false"
                app:font_name="@string/VIP_Rawy_Bold_Bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.fontutil.TextViewCustomFont
                android:id="@+id/textViewCustomFont8"
                style="@style/Zhra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimension24"
                android:text="@string/discount"
                app:font_name="@string/zahra_arabic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                style="@style/des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50 %"
                app:layout_constraintTop_toBottomOf="@+id/textViewCustomFont8"
                app:layout_constraintStart_toStartOf="@+id/textViewCustomFont8" />

            <TextView
                style="@style/desk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="علي قصات الشعر"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>




</android.support.v7.widget.CardView>